# fastapi_starter

./: pyproject.toml
app/: config.py  main.py  models.py  schemas.py
app/db/: base.py  session.py
migrations/: env.py
migrations/versions/: 08db6b59f6be_create_posts_table.py
tests/: test_ganstudio_be.py
