[tool.poetry]
name = "ganstudio_be"
version = "0.1.0"
description = ""
authors = ["Jithu Sunny <jithu@keyvalue.systems>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
SQLAlchemy = "^1.4.18"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.14.0"
python-dotenv = "^0.17.1"
alembic = "^1.6.5"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"
sqlalchemy-stubs = "^0.4"
flake8 = "^3.9.2"
autoflake = "^1.4"
isort = "^5.8.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
